# ChangeLog for sys-apps/systemd
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.126 2013/04/18 16:55:20 mgorny Exp $

  18 Apr 2013; Michał Górny <mgorny@gentoo.org> systemd-201.ebuild,
  systemd-9999.ebuild:
  Fix mistyped gcc version number.

  18 Apr 2013; Michał Górny <mgorny@gentoo.org> systemd-201.ebuild,
  systemd-9999.ebuild:
  Update the firmware-loader CONFIG_CHECK for 3.9 kernel. Thanks to WilliamH for
  noticing.

  18 Apr 2013; Michał Górny <mgorny@gentoo.org> systemd-201.ebuild,
  systemd-9999.ebuild:
  Add a gcc version check wrt bug #466160.

  17 Apr 2013; Michał Górny <mgorny@gentoo.org> metadata.xml,
  systemd-201.ebuild, systemd-9999.ebuild:
  Introduce USE=firmware-loader, as suggested by williamh. Check whether kernel
  supports loading firmwares and warn properly.

  17 Apr 2013; Michał Górny <mgorny@gentoo.org> systemd-201.ebuild,
  systemd-9999.ebuild:
  Fix duplicated --enable-polkit.

  17 Apr 2013; Michał Górny <mgorny@gentoo.org> metadata.xml,
  systemd-201.ebuild, systemd-9999.ebuild:
  Add USE=keymap to match udev ebuild.

  16 Apr 2013; Michał Górny <mgorny@gentoo.org> systemd-201.ebuild,
  systemd-9999.ebuild:
  Put polkit under a USE flag since people may want to disable the whole policy
  magic.

  16 Apr 2013; Michał Górny <mgorny@gentoo.org> systemd-201.ebuild,
  systemd-9999.ebuild:
  Perform kernel checks in pkg_pretend() to warn the user early. Use MERGE_TYPE
  as an efficient replacement for pkg_preinst() implications.

  16 Apr 2013; Michał Górny <mgorny@gentoo.org> systemd-201.ebuild,
  systemd-9999.ebuild:
  Re-enable IMA, my mistake.

  15 Apr 2013; Michał Górny <mgorny@gentoo.org> systemd-201.ebuild:
  Backport quota dep removal and configure cleanup from -9999. No need to
  revbump since the changes affect build process only.

  15 Apr 2013; Michał Górny <mgorny@gentoo.org> systemd-9999.ebuild: