@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/systemd
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.126 2013/04/18 16:55:20 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.127 2013/04/18 17:01:29 mgorny Exp $
+
+  18 Apr 2013; Michał Górny <mgorny@gentoo.org> -systemd-198-r1.ebuild,
+  metadata.xml:
+  The required udev version has been removed.
 
   18 Apr 2013; Michał Górny <mgorny@gentoo.org> systemd-201.ebuild,
   systemd-9999.ebuild:
